fixed bug in chrome: cloud wasn't stretched

--- a/css/style.css
+++ b/css/style.css
@@ -4,30 +4,32 @@
 
 #sorted_days {
     margin:20px 0;
-    width:900px;
+    width:960px;
     position:absolute;
-    top:450px;
+    top:350px;
     left:0px;
 }
 
 /* The line to be drawed in the background. */
 .line{
 /*    margin:10px 0;*/
-    max-width:930px;
+    max-width:950px;
     height:1px;
 	line-height:1px;
 	background-color:#000000;
 	font-size:0px;
 	border:0px;
 	border-collapse:collapse;
+	position:relative;
+	top:-4px;
 }
 /* For every box over the drawed line*/
 .timelinebox{
     float:left;
-    margin:1em;
-    width:8em;
+    margin:0.5em;
+    width:7em;
     font-size:16px;
-    height:3em;
+    height:2.5em;
     border:2px solid black;
     position:relative;
     top:-35px;
@@ -38,10 +40,10 @@
 /* The box for the arrow or triangle icon, so that the line looks more like a timeline. */
 .arrowbox{
     float:left;
-    margin:10px;
+    margin:10px 5px;
     max-width:10px;
     position:relative;
-    top:-20px;
+    top:-25px;
     left:5px;
     background-color:white;
 }
@@ -54,10 +56,11 @@
 
 /* Background and container of the elements. */
 #unsorted_days{
-    width:600px;
-    height:400px;
+    width:960px;
+    height:300px;
     background-image:url('../img/cloud.svg');
-    background-size:100% 100%;
+    background-repeat:no-repeat;
+    background-size:100% 100% !important;
     position:absolute;
 }
 /* Allows positioning every box inside the cloud. */
@@ -65,40 +68,42 @@
     text-align:center;
     position:relative;
     font-size:16px;
-    padding: 0.5em 0;
+    padding: 3px 0;
     max-width:6em;
     max-height:2em;
-    border:1px solid #FF0066;
-    border-radius: 12px;
+    border:1px solid black;
+    border-radius: 10px;
+    background:#FBFEFE;
     z-index:2;
+    user-select:none;
 }
 /* Below are every box with defined positions.*/
 #drag_monday{
     top:50px;
-    left:320px;
+    left:550px;
 }
 #drag_tuesday{
-    top:70px;
-    left:180px;
+    top:60px;
+    left:300px;
 }
 #drag_wednesday{
     top:65px;
-    left:380px;
+    left:680px;
 }
 #drag_thursday{
-    top:70px;
-    left:100px;
+    top:90px;
+    left:90px;
 }
 #drag_friday{
-    top:80px;
-    left:420px;
+    top:70px;
+    left:720px;
 }
 #drag_saturday{
-    top:70px;
-    left:60px;
+    top:40px;
+    left:300px;
 }
 #drag_sunday{
-    top:00px;
-    left:250px;
+    top:-25px;
+    left:500px;
 }
 
